# vector

./: CMakeLists.txt  README.md  main.cpp  main.h  vector.h
VUobjprog3 su vector/: CMakeLists.txt  README.md  main.cpp
VUobjprog3 su vector/functions/: deque_functions.cpp  list_functions.cpp  studentas.cpp  v0.2.cpp
VUobjprog3 su vector/headers/: deque_header.h  list_header.h  main_header.h  studentas.h  v0.2.h  vector.h  zmogus.h
